@@ -939,6 +939,10 @@ div.v-subheader {
  cursor:pointer;
 }
 
+.jumplist-folder {
+ opacity:0.65;
+}
+
 @media screen and (max-width: 289px) {
  #home-button{display:none;}
 }
@@ -982,3 +986,4 @@ div.v-subheader {
 .sleep-list .v-list__tile {
  padding:0px;
 }
+
