@@ -4,6 +4,8 @@
 2. Try to use material icons, and not LMS icons, for favourites entries.
 3. Enable history menu even when there is only a single text item in list.
 4. Enable 'More' for artists, or albums, within a favourite.
+5. If showing jumplist for mixed folders and files, draw jumplist items for
+   folders slighttly dimmer than files.
 
 0.9.3
 -----
